--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --write '**/*.{ts,tsx}'"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.0.1",
@@ -39,6 +40,7 @@
     "eslint-config-next": "14.2.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "prettier": "^3.6.2",
     "ts-jest": "^29.2.3",
     "typescript": "^5"
   },
